2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: Support for #index- fragment identifiers.

	* cc-style.css: Prety styling for reformatted sources.
	Support for new version of manifest dump sections.

	* error-description-source.xml: Support for Whatpm::CacheManifest,
	Whatpm::CSS::SelectorsParser, Whatpm::CSS::MediaQueryParser,
	and Whatpm::CSS::Parser errors.  Support for l10n of cache
	manifest dump sections.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Set min/max width/height such that tab content
	is accessible even when stupid size of window is used.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js (_showTab): Show the tab button of the selected
	tab.

	* cc-script.css (nav): Show scrollbar if there are too many
	tabs.

	* cc.cgi: Reset |$output->input| even if |$input->{s}| is undef (i.e.
	imlementation error case).

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error entries for
	Whatpm::URIChecker and Whatpm::LangTag error types
	are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error entries
	for Whatpm::RDFXML errors are addded.  Missing entries
	for Whatpm::HTMLTable errors are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for 
	Whatpm::ContentChecker::Atom errors are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for
	Whatpm::ContentChecker and Whatpm::ContentChecker::HTML
	error types are added.  Error entries used by these
	modules are marked as such.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for Whatpm::HTML
	error types are added.  Error entries used by Whatpm::HTML
	are marked as "HTML::Parser".

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Add icons to links and headings of error sections.
	Use standard "uncertain" color for level-u errors.  "No error found"