@@ -272,6 +272,7 @@ at-rule not allowed;;An <code>@<var>{text}</var></code> rule is not allowed here
 at-rule syntax error;;The <code>@<var>{text}</var></code> rule is syntactically incorrect.
 block not closed;;Block is not closed before the end of file.
 CSS duplication;;Component <code>&lt;<var>{text}</var>&gt;</code> is already specified.
+CSS cursor hand;;Value <code>hand</code> is not valid as <code>&lt;'cursor'&gt;</code>.
 CSS syntax error;;Specified value is syntactically not a correct <code>&lt;<var>{text}</var>&gt;</code>.
 no declaration block;;No declaration block is found after a group of selectors.
 no property colon;;A <code>:</code> character is missing after a property name.
